// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostLabel renders 1`] = `
<View>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
  >
    REQUEST
  </Text>
</View>
`;

exports[`PostMenu returns a popupmenu when deleting allowed 1`] = `
<PopupMenuButton
  actions={
    Array [
      "Delete This Post",
    ]
  }
  destructiveButtonIndex={0}
  hitSlop={
    Object {
      "bottom": 10,
      "left": 10,
      "right": 15,
      "top": 20,
    }
  }
  onSelect={[Function]}
>
  <Icon
    name="More"
  />
</PopupMenuButton>
`;

exports[`PostMenu returns a popupmenu when editing allowed 1`] = `
<PopupMenuButton
  actions={
    Array [
      "Edit This Post",
    ]
  }
  destructiveButtonIndex={-1}
  hitSlop={
    Object {
      "bottom": 10,
      "left": 10,
      "right": 15,
      "top": 20,
    }
  }
  onSelect={[Function]}
>
  <Icon
    name="More"
  />
</PopupMenuButton>
`;

exports[`PostMenu returns a popupmenu when flagging allowed 1`] = `
<PopupMenuButton
  actions={
    Array [
      "Flag This Post",
    ]
  }
  destructiveButtonIndex={0}
  hitSlop={
    Object {
      "bottom": 10,
      "left": 10,
      "right": 15,
      "top": 20,
    }
  }
  onSelect={[Function]}
>
  <Icon
    name="More"
  />
</PopupMenuButton>
`;

exports[`PostMenu returns a popupmenu when removePost 1`] = `
<PopupMenuButton
  actions={
    Array [
      "Remove Post From Community",
    ]
  }
  destructiveButtonIndex={0}
  hitSlop={
    Object {
      "bottom": 10,
      "left": 10,
      "right": 15,
      "top": 20,
    }
  }
  onSelect={[Function]}
>
  <Icon
    name="More"
  />
</PopupMenuButton>
`;

exports[`PostMenu returns null when no actions 1`] = `null`;

exports[`renders correctly when showCommunity is true 1`] = `
<View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Avatar
        avatarUrl="foo.png"
      />
    </TouchableOpacity>
  </View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Zeus
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Go!
      </Text>
    </TouchableOpacity>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        10m ago
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        •
      </Text>
      <TouchableOpacity
        activeOpacity={0.2}
        focusedOpacity={0.7}
        onPress={[Function]}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        >
          Olympus
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View>
    <PostMenu
      deletePost={[Function]}
      editPost={[Function]}
      flagPost={[Function]}
      removePost={null}
    />
  </View>
</View>
`;

exports[`renders correctly with all=true, and no community or user 1`] = `
<View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Avatar
        avatarUrl="foo.png"
      />
    </TouchableOpacity>
  </View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Zeus
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Go!
      </Text>
    </TouchableOpacity>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        10m ago
      </Text>
    </View>
  </View>
  <View>
    <PostMenu
      deletePost={[Function]}
      editPost={[Function]}
      flagPost={[Function]}
      removePost={[Function]}
    />
  </View>
</View>
`;

exports[`renders correctly with no flagging 1`] = `
<View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Avatar
        avatarUrl="foo.png"
      />
    </TouchableOpacity>
  </View>
  <View>
    <TouchableOpacity
      activeOpacity={0.2}
      focusedOpacity={0.7}
      onPress={[Function]}
    >
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Zeus
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        Go!
      </Text>
    </TouchableOpacity>
    <View>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        10m ago
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
      >
        •
      </Text>
      <TouchableOpacity
        activeOpacity={0.2}
        focusedOpacity={0.7}
        onPress={[Function]}
      >
        <Text
          accessible={true}
          allowFontScaling={true}
          disabled={false}
          ellipsizeMode="tail"
        >
          Olympus
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View>
    <PostMenu
      deletePost={[Function]}
      editPost={[Function]}
      flagPost={undefined}
      removePost={null}
    />
  </View>
</View>
`;
